2011-12-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (VersionCommand): For MSVC builds, report if
	SSE or SSE2 was used in the build.

	* Release GraphicsMagick 1.3.13.

	* Update libtiff to release 4.0.0

2011-12-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Update libpng to release 1.5.7

2011-12-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Update lcms2 to release 2.3

2011-12-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Update Automake used to 1.11.2.

2011-12-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/OpenMP.rst: Updated with new results, including 12-core
	Intel Xeon E5649 and 16-core AMD Opteron 6220 "Bulldozer" CPUs.

	* magick/studio.h: Enable building and running correctly with
	Open64 Compiler Suite: Version 4.2.5.2 compiler with OpenMP.

	* magick/command.c (BenchmarkImageCommand): Add -rawcsv option to
	benchmark to output only original data in a CSV format.

2011-12-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Fix various issues noticed when cross-compiling for the
	i686-w64-mingw32 target.

2011-12-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (ConvolveImage): For Q8 and Q16 builds use
	'float' rather than 'double' for computations in order to improve
	performance with some compilers.

2011-12-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (ConvolveImage): Special-case grayscale images
	for better convolution performance.

2011-12-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (BenchmarkUsage): -stepthreads now requires an
	argument which is the increment (starting at zero) to the number
	of threads for each step.  This hastens benchmarking with a large
	number of cores.

2011-12-07  Glenn Randers-Pehrson  <glennrp@simple...>

	* coders/png.c: Eliminate use of FARDATA.  It's no longer needed
	and will no longer be supplied by png.h in libpng-1.6.0.
