@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020111224"
-#define public MagickPackageReleaseDate "snapshot-20111224"
+#define public MagickPackageVersionAddendum ".020111229"
+#define public MagickPackageReleaseDate "snapshot-20111229"
