@@ -38,8 +38,8 @@ extern "C" {
 #define MagickLibVersion  0x100700
 #define MagickLibVersionText  "1.4"
 #define MagickLibVersionNumber 10,7,0
-#define MagickChangeDate   "20111224"
-#define MagickReleaseDate  "snapshot-20111224"
+#define MagickChangeDate   "20111229"
+#define MagickReleaseDate  "snapshot-20111229"
 	
 /*
   The MagickLibInterfaceNewest and MagickLibInterfaceOldest defines
